# lit-up

./: .dockerignore  .env.sample  .gitignore  .prettierignore  .prettierrc.json  ARCHITECTURE.md  README.md  TODO.md  docker-compose.local.yml  index.html  lefthook.yml  lit-up.code-workspace  lit_up_config.yaml.sample  package-lock.json  package.json  song_list.yaml.sample  taskfile.yaml  tsconfig.json
infra/: .env.sample  .gitignore  README.md  cloudfront-auth.tf  dns.tf  provider.aws.tf  route53-record.tf  s3-static-site.tf  s3-version-config.tf  variables.tf
projects/api/: .gitignore  .mypy.ini  .pylintrc  README.md  pyproject.toml  requirements-dev.txt  server.py
projects/api/config-delete/: README.md  handler.py  pyproject.toml
projects/api/config-get/: README.md  handler.py  pyproject.toml
projects/api/config-list/: README.md  handler.py  pyproject.toml
projects/api/config-patch/: README.md  handler.py  pyproject.toml
projects/api/config-post/: README.md  handler.py  pyproject.toml  requirements.txt
projects/api/events/: config-delete.apigw.json  config-get.apigw.json  config-list.apigw.json  config-patch.apigw.json  config-post.apigw.json
projects/api/local/: README.md  env.debug.json  env.docker.json  env.json  template.yaml
projects/api/local/events/: config-post.apigw.json
projects/api/local/sam/: Dockerfile
projects/api/local/scripts/: create_local_dynamodb_table.py  forward_debug_port.sh
projects/api/models/: __init__.py  config.py  pyproject.toml  song.py
projects/api/scripts/: analyze_song_durations.py  concatenate_playlist.py  emoji_to_favicon.py  generate_config.py  lit_up_script_utils.py  process_songs.py  requirements.txt
projects/api/song-delete/: README.md  handler.py  pyproject.toml
projects/api/song-get/: README.md  handler.py  pyproject.toml
projects/api/song-list/: README.md  handler.py  pyproject.toml
projects/api/song-patch/: README.md  handler.py  pyproject.toml
projects/api/song-post/: README.md  handler.py  pyproject.toml
projects/api/tests/: __init__.py  conftest.py  test_configs_e2e.py  test_songs_e2e.py
public/: manifest.json
scripts/: analyze_mp3_durations.py  concatenate_audio.py  create_favicon.py  emoji_to_favicon.py  generate_config.py  get_mp3_duration.py  process_songs.py  requirements.txt
src/: App.tsx  constants.ts  index.css  main.tsx
(+63 files in other folders)
