[project]
name = "lit-up-api"
version = "0.1.0"
description = "Lit Up API - Lambda functions workspace"
requires-python = ">=3.13"
dependencies = [
    # Lambda runtime dependencies will be inherited from workspace members
    "boto3-stubs>=1.42.13",
]

[tool.uv]
dev-dependencies = [
    # Code formatting
    "black>=24.0.0",
    "isort>=5.13.0",
    # Linting
    "ruff>=0.8.0",
    # Local debugging (SAM + debugpy wait-for-attach)
    "debugpy>=1.8.0",
    # Type checking
    "mypy>=1.19.1",
    "types-PySocks>=1.7.1.20251001",
    "types-PyYAML>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
    # Security
    "pip-audit>=2.10.0",
    # TODO: Lambda runtime dependencies duplicated here for VS Code IntelliSense/lang server
    # uv workspaces don't automatically install workspace member runtime deps into root venv.
    # This is needed so VS Code can use the root venv Python interpreter for type checking/autocomplete.
    # Ideally, we'd find a way to automatically sync workspace member runtime deps to root dev-deps.
    "boto3>=1.35.0",
    "pydantic>=2.0.0",
]

[tool.uv.workspace]
members = ["config-post"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
